--- a/index.org
+++ b/index.org
@@ -7,3 +7,25 @@
 ** TODO 设置背景图片
 ** DONE 独立域名
 ** TODO 小情书
+
+* Tags
+- 留学日常
+- 两人 (故事 & 儿子 & Family)
+- 三餐 (美食)
+- 四季 (旅游)
+- 我们的故事
+
+* Categorys
+- 我们的故事
+- 留学日常
+- 程序猿日常
+- (读书笔记)
+- 学习笔记
+- 小情书
+
+* 从这里开始
+2018/11/xx 认识
+2019/7/16 确定关系
+
+6.30 生日
+
