--- a/index.org
+++ b/index.org
@@ -2,8 +2,8 @@
 #+startup: indent
 
 * WORKS
-** TODO publish to github
+** DONE publish to github
 ** TODO 添加媒体账号到抖音
 ** TODO 设置背景图片
-** TODO 独立域名
+** DONE 独立域名
 ** TODO 小情书
